--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:10.2.0'
     compile 'com.google.android.gms:play-services-location:10.2.0'
     compile 'com.android.support:design:26.0.1'
+    compile 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
+    compile 'com.google.zxing:core:3.2.1'
     testCompile 'junit:junit:4.12'
 }
